--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,53 @@ body {
     margin: 0px;
   }
 }
+
+.main-page {
+  background-color: #eeeeee73;
+  min-height: 100vh;
+
+  .main-page-content {
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 0px 0px 8px 0px #0000000d;
+    width: 100%;
+    max-width: 1260px;
+    min-height: calc(100vh - 32px);
+    padding: 32px;
+
+    .main-page-upper-container {
+      gap: 16px;
+    }
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  .main-page {
+    .main-page-content {
+      padding: 16px;
+    }
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .main-page {
+    .main-page-content {
+      border-radius: 0px;
+      .main-page-upper-container {
+        flex-direction: column;
+      }
+    }
+  }
+  body::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-page {
+    padding: 0px;
+    .main-page-content {
+      padding: 0px;
+    }
+  }
+}
