--- a/src/components/PlaylistCard/PlaylistCard.scss
+++ b/src/components/PlaylistCard/PlaylistCard.scss
@@ -1,6 +1,6 @@
 .playlist-card-main-container {
   display: grid;
-  grid-template-columns: 16px 1fr 2fr;
+  grid-template-columns: 16px 100px auto;
   align-items: center;
   grid-gap: 8px;
   padding: 8px 16px;
@@ -8,15 +8,15 @@
   .playlist-card-left-container {
     .playlist-card-img-container {
       height: 70px;
-      width: inherit;
+      width: 100%;
       background: black;
       position: relative;
       border-radius: 6px;
     }
 
     .playlistCard-thumbnail {
-      height: inherit;
-      max-width: 100%;
+      height: 100%;
+      width: 100%;
     }
   }
 
